<resources>
    <string name="app_name">My ECOMMERCE App</string>
    <string name="first_slide">Choose your products</string>
    <string name="second_slide">Fast delivery</string>
    <string name="third_slide">Good services</string>
    <string name="description">dummy test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price</string>
    <string name="women_dresses_are_something_that_can_be_worn_on_any_occasion_without_any_hassle_be_it_summer_winter_fall_or_monsoon_there_is_a_dress_that_is_perfect_for_every_season_everyone_wants_to_look_good_without_putting_a_lot_of_effort_and_no_other_outfit_can_do_that_better_than_a_dress">Women Dresses are something that can be worn on any occasion without any hassle. Be it summer, winter, fall, or monsoon, there is a dress that is perfect for every season. Everyone wants to look good without putting a lot of effort and no other outfit can do that better than a dress.</string>
    <string name="_4_0">4.0</string>
    <string name="product_name">Product Name</string>
    <string name="todo">TODO</string>
    <string name="_1">1</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
</resources>