<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.DetailedActivity">


    <ImageView
        android:id="@+id/detailed_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/detailed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#A3E3EC"
        app:title="Product Detailed" />

    <androidx.cardview.widget.CardView
        android:translationY="-50dp"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_img">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/detailed_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/product_name"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="80dp"
                    android:text="@string/_4_0"
                    android:id="@+id/my_ratingId"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="20dp"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="0.1"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_alignParentEnd="true"
                        />


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailed_desc"
                android:layout_marginTop="10dp"
                android:text="@string/women_dresses_are_something_that_can_be_worn_on_any_occasion_without_any_hassle_be_it_summer_winter_fall_or_monsoon_there_is_a_dress_that_is_perfect_for_every_season_everyone_wants_to_look_good_without_putting_a_lot_of_effort_and_no_other_outfit_can_do_that_better_than_a_dress"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="₹"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"

                    ></TextView>

                    <TextView
                    android:id="@+id/detailed_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textStyle="bold"
                    android:textColor="@color/purple_700"
                    ></TextView>


            </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center"
              android:layout_margin="10dp"
              >
              <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:src="@drawable/plusicon"
                  android:layout_marginEnd="7dp"
                  android:id="@+id/add_item"
                  android:contentDescription="TODO">

              </ImageView>
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/quantity"
                  android:text="@string/_1"
                  android:textStyle="bold"
                  android:textSize="30sp"
                  android:textColor="@color/purple_700">

              </TextView>

          <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:src="@drawable/iconminus"
                  android:layout_marginLeft="7dp"
                  android:id="@+id/remove_item">

          </ImageView>
          </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:backgroundTint="@color/textHeading"
        android:id="@+id/Add_To_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/mycart"
        android:drawableTint="@color/white"
        android:padding="14dp"
        android:layout_margin="10dp"
        android:text="Add To Card"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintVertical_bias="0.508"
        app:layout_constraintWidth_percent=".9"/>

    <Button
        android:backgroundTint="#CC1616"
        android:id="@+id/buy_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
        android:drawableTint="@color/white"
        android:padding="14dp"
        android:layout_margin="10dp"
        android:text="Buy Now"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_To_card"
        app:layout_constraintWidth_percent=".9"/>


</androidx.constraintlayout.widget.ConstraintLayout>